deploy_frontend_task2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app-frontend
  template:
    metadata:
      labels:
        app: my-app-frontend
    spec:
      containers:
      - name: frontend
        image: nginx:latest
        ports:
          - containerPort: 80
