deploy_task1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: web
        image: nginx:latest
        ports:
          - containerPort: 80
      - name: tool
        image: wbitt/network-multitool:latest
        ports:
          - containerPort: 8080
