serv_cluster_task1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cluster
spec:
  selector:
    app: my-app
  ports:
  - name: web
    protocol: TCP
    port: 9001
    targetPort: 80
  - name: tool
    protocol: TCP
    port: 9002
    targetPort: 8080
  type: ClusterIP
