serv_frontend_task2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: my-app-frontend
  ports:
  - name: service-frontend
    protocol: TCP
    port: 80
