serv_node_task1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-node
spec:
  selector:
    app: my-app
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
